syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc";
option java_outer_classname = "ProductsOfferingProto";
option objc_class_prefix = "HLW";

package um.feri.ita.products;

message Empty {}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  double quantity = 5;
  string unit = 6;
  string category = 7;
  string farmerId = 8;
  string farmerName = 9;
}

message ProductId {
  string id = 1;
}

message ProductList {
  repeated Product products = 1;
}

service ProductsOfferingService {
  rpc getAllProducts(Empty) returns (ProductList);
  rpc getProduct(ProductId) returns (Product);
  rpc addProduct(Product) returns (Product);
  rpc updateProduct(Product) returns (Product);
  rpc deleteProduct(ProductId) returns (Empty);
}
